--- a/monument-art-store/clientApp/src/app/components/dashboard/dashboard.component.css
+++ b/monument-art-store/clientApp/src/app/components/dashboard/dashboard.component.css
@@ -1,28 +1,47 @@
-.grid-container {
-  margin: 20px;
-}
-
 .dashboard-card {
   position: absolute;
   top: 15px;
   left: 15px;
   right: 5px;
-  bottom: 20px;
+  bottom: 15px;
 }
 
 .dashboard-card-content {
   text-align: left;
 }
 
-.example-container {
+.sideNav-container {
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  background: #eee;
+  background: #ffffff;
+}
+
+.toolbar {
+  background-color: #ffffff;
 }
 
 .sideNav {
-  width: 200px;
+  width: 250px;
+  background-color: #49aae2;
+}
+
+.spacer {
+  flex: 1 1 auto;
+}
+
+.account-circle {
+  font-size: 40px;
+  margin-right: 20px;
+  margin-top: 10px;
+}
+
+.menuBtn:hover {
+  cursor: pointer;
+}
+.mat-h1 {
+  margin: 18px 15px 15px 15px;
+  color: #ffffff;
 }
