--- a/monument-art-store/clientApp/src/app/components/dashboard/dashboard.component.html
+++ b/monument-art-store/clientApp/src/app/components/dashboard/dashboard.component.html
@@ -1,24 +1,23 @@
-<mat-sidenav-container class="example-container">
-  <mat-sidenav class="sideNav" mode="side" opened>
-    <h1 class="mat-h1">Dashboard</h1>
+<mat-sidenav-container class="sideNav-container">
+  <mat-sidenav class="sideNav" mode="side" [opened]="opened">
+    <h1 class="mat-h1">
+      <strong>Monument Art Store</strong>
+    </h1>
+    <mat-divider></mat-divider>
   </mat-sidenav>
-  <mat-sidenav-content>Main content</mat-sidenav-content>
+  <mat-sidenav-content>
+    <mat-toolbar class="toolbar">
+      <span class="menuBtn" (click)="opened = !opened">
+        <mat-icon>menu</mat-icon>
+      </span>
+      <span class="spacer"></span>
+      <span>
+        <mat-icon class="account-circle">
+          account_circle
+        </mat-icon>
+      </span>
+    </mat-toolbar>
+    <mat-divider>
+    </mat-divider>
+  </mat-sidenav-content>
 </mat-sidenav-container>
-
-<!-- <div class="grid-container">
-  <h1 class="mat-h1">Dashboard</h1>
-  <mat-grid-list cols="2">
-    <mat-grid-tile colspan="2" rowspan="1">
-      <mat-card class="dashboard-card">
-        <mat-card-header>
-          <mat-card-title>
-            card1 title
-          </mat-card-title>
-        </mat-card-header>
-        <mat-card-content class="dashboard-card-content">
-          <div>Card Content Here</div>
-        </mat-card-content>
-      </mat-card>
-    </mat-grid-tile>
-  </mat-grid-list>
-</div> -->
