feat : add router link active attr to activate route and design background

--- a/monument-art-store/clientApp/src/app/app.component.html
+++ b/monument-art-store/clientApp/src/app/app.component.html
@@ -9,7 +9,7 @@
         <mat-list>
             <div mat-subheader class="sideNavHeaderLink">Items</div>
             <mat-nav-list *ngFor="let item of menuItems">
-                <a mat-list-item [routerLink]="item.href">
+                <a mat-list-item [routerLink]="item.href" routerLinkActive="active">
                     <mat-icon mat-list-icon>{{item.icon}}</mat-icon>
                     <div mat-line>{{item.name}}</div> 
                 </a>
