--- a/monument-art-store/clientApp/src/app/components/arts/arts.component.html
+++ b/monument-art-store/clientApp/src/app/components/arts/arts.component.html
@@ -1,28 +1,37 @@
-<mat-card>
+<mat-card class="card">
     <mat-card-header class="header">
         <h1 class="mat-h1">
             Arts
         </h1>
     </mat-card-header>
     <mat-card-content class="content">
-        <mat-card class="example-card">
-            <!-- <mat-card-header>
-              <div mat-card-avatar class="example-header-image"></div>
-              <mat-card-title>Shiba Inu</mat-card-title>
-              <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-            </mat-card-header> -->
-            <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-            <mat-card-content>
-              <p>
-                The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-                A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-                bred for hunting.
-              </p>
-            </mat-card-content>
-            <!-- <mat-card-actions>
-              <button mat-button>LIKE</button>
-              <button mat-button>SHARE</button>
-            </mat-card-actions> -->
-          </mat-card>
+        <div class="container">
+            <img class="bg-img" src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Snow">
+            <div class="bottom-left">Bottom Left</div>
+            <div class="top-left">
+                <mat-form-field class="example-full-width">
+                    <input matInput value="Title of art">
+                    <mat-hint class="location">Hint</mat-hint>
+                </mat-form-field>
+                
+            </div>
+            <div class="top-right">
+                <div class="example-button-container">
+                    <button class="btnEditArt" mat-mini-fab>
+                      <mat-icon>edit</mat-icon>
+                    </button>
+                    <button mat-mini-fab color="warn">
+                        <mat-icon>delete</mat-icon>
+                    </button>
+                </div>
+            </div>
+            <div class="bottom-right">Bottom Right</div>
+            <div class="centered">
+                <mat-form-field class="example-full-width">
+                    <mat-label>Leave a comment</mat-label>
+                    <textarea matInput placeholder="Ex. It makes me feel..."></textarea>
+                </mat-form-field>
+            </div>
+        </div>        
     </mat-card-content>
 </mat-card>
