--- a/monument-art-store/clientApp/src/app/components/login/login.component.html
+++ b/monument-art-store/clientApp/src/app/components/login/login.component.html
@@ -1,1 +1,87 @@
-<p>login works!</p>
+<mat-card>
+    <mat-card-content>
+        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+            <mat-icon class="account_circle">account_circle</mat-icon>
+            <h1 class="mat-h1"><strong>Sign In</strong></h1>
+            <mat-form-field class="full-width-input">
+                <input 
+                matInput 
+                placeholder="Email" 
+                formControlName="login" 
+                required
+            >
+                <mat-error 
+                    *ngIf="loginForm.get('login').invalid 
+                    && (loginForm.get('login').touched 
+                    || loginForm.get('login').dirty)"
+                >
+                    <mat-error 
+                        *ngIf="loginForm.get('login').getError('required')"
+                    >
+                        Email is required
+                    </mat-error>
+                    <mat-error 
+                        *ngIf="loginForm.get('login').getError('minLength')"
+                    >
+                        Email must have at least 12 characters
+                    </mat-error>
+                    <mat-error 
+                        *ngIf="loginForm.get('login').getError('email')"
+                    >
+                        This field must be a valid email address
+                    </mat-error>
+                </mat-error>
+            </mat-form-field>
+            <mat-form-field class="full-width-input">
+                <input 
+                    matInput placeholder="Password" 
+                    [type]="hide ? 'password' : 'text'" 
+                    formControlName="password" 
+                    required
+                >
+                <button 
+                    type="button" 
+                    mat-icon-button 
+                    matSuffix 
+                    (click)="hide = !hide" 
+                    attr.aria-label="Hide password" 
+                    [attr.aria-pressed]="hide"
+                >
+                    <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                </button>
+                <mat-error 
+                    *ngIf="loginForm.get('password').invalid 
+                    && (loginForm.get('password').touched 
+                    || loginForm.get('password').dirty)"
+                >
+                    <mat-error 
+                        *ngIf="loginForm.get('password').getError('required')"
+                    >
+                        Password is required
+                    </mat-error>
+                    <mat-error 
+                        *ngIf="loginForm.get('password').getError('minLength')"
+                    >
+                        Password must have at least 12 characters
+                    </mat-error>
+                    <mat-error 
+                        *ngIf="loginForm.get('password').getError('pattern')"
+                    >
+                        Password must be at least 8 characters. And has one digit character (0-9), one word character (alphanumeric or underscore), and different of LINE FEED character, and has at least one of special character !@#\$%\^&\* and at least one upper/lower character
+                    </mat-error>
+                </mat-error>
+            </mat-form-field>
+            <p class="registerP">
+                <strong>Are you new to Monument Art Store ?</strong> <a class="registerA" routerLink="/register"> Sign up now</a>
+            </p>
+            <button 
+                mat-raised-button 
+                color="primary" 
+                class="LoginBtn"
+                [disabled]="loginForm.invalid"
+            >
+                Login
+            </button>
+        </form>
+    </mat-card-content>
+</mat-card>
