--- a/monument-art-store/clientApp/src/app/components/login/login.component.html
+++ b/monument-art-store/clientApp/src/app/components/login/login.component.html
@@ -1,87 +1,89 @@
-<mat-card>
-    <mat-card-content>
-        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-            <mat-icon class="account_circle">account_circle</mat-icon>
-            <h1 class="mat-h1"><strong>Sign In</strong></h1>
-            <mat-form-field class="full-width-input">
-                <input 
-                matInput 
-                placeholder="Email" 
-                formControlName="login" 
-                required
-            >
-                <mat-error 
-                    *ngIf="loginForm.get('login').invalid 
-                    && (loginForm.get('login').touched 
-                    || loginForm.get('login').dirty)"
-                >
-                    <mat-error 
-                        *ngIf="loginForm.get('login').getError('required')"
+<div class="row">
+    <div class="col-md-6 offset-md-3">
+        <div class="card">
+            <div class="card-body">
+                <h1 class="card-title"><strong>Welcome</strong></h1>
+                <span class="text-muted">Sign in to <strong>monument art store</strong></span>
+                <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="loginForm">
+                    <div class="form-group">
+                        <label for="email"><strong>Email</strong></label>
+                        <input 
+                            type="email" 
+                            class="form-control" 
+                            placeholder="Email" 
+                            formControlName="login" 
+                            required
+                        >
+                        <div 
+                            *ngIf="loginForm.get('login').invalid 
+                            && (loginForm.get('login').touched 
+                            || loginForm.get('login').dirty)"
+                        >
+                            <small 
+                                class="form-text text-muted"
+                                *ngIf="loginForm.get('login').getError('required')"
+                            >
+                                Email is required
+                            </small>
+                            <small 
+                                class="form-text text-muted"
+                                *ngIf="loginForm.get('login').getError('minLength')"
+                            >
+                                Email must have at least 12 characters
+                            </small>
+                            <small 
+                                class="form-text text-muted"
+                                *ngIf="loginForm.get('login').getError('email')"
+                            >
+                                This field must be a valid email address
+                            </small>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="password"><strong>Password</strong></label>
+                        <input 
+                            class="form-control" 
+                            placeholder="Password"
+                            type="password" 
+                            formControlName="password" 
+                            required
+                        >
+                        <div 
+                            *ngIf="loginForm.get('password').invalid 
+                            && (loginForm.get('password').touched 
+                            || loginForm.get('password').dirty)"
+                        >
+                            <small 
+                                class="form-text text-muted"
+                                *ngIf="loginForm.get('password').getError('required')"
+                            >
+                                Email is required
+                            </small>
+                            <small 
+                                class="form-text text-muted"
+                                *ngIf="loginForm.get('password').getError('minLength')"
+                            >
+                                Email must have at least 8 characters
+                            </small>
+                            <small 
+                                class="form-text text-muted"
+                                *ngIf="loginForm.get('password').getError('pattern')"
+                            >
+                                Password must be at least 8 characters. And has one digit character (0-9), one word character (alphanumeric or underscore), and different of LINE FEED character, and has at least one of special character !@#\$%\^&\* and at least one upper/lower character
+                            </small>
+                        </div>
+                    </div>
+                    <button 
+                        [disabled]="loginForm.touched && loginForm.invalid" 
+                        class="btn btn-outline-primary loginBtn"
                     >
-                        Email is required
-                    </mat-error>
-                    <mat-error 
-                        *ngIf="loginForm.get('login').getError('minLength')"
-                    >
-                        Email must have at least 12 characters
-                    </mat-error>
-                    <mat-error 
-                        *ngIf="loginForm.get('login').getError('email')"
-                    >
-                        This field must be a valid email address
-                    </mat-error>
-                </mat-error>
-            </mat-form-field>
-            <mat-form-field class="full-width-input">
-                <input 
-                    matInput placeholder="Password" 
-                    [type]="hide ? 'password' : 'text'" 
-                    formControlName="password" 
-                    required
-                >
-                <button 
-                    type="button" 
-                    mat-icon-button 
-                    matSuffix 
-                    (click)="hide = !hide" 
-                    attr.aria-label="Hide password" 
-                    [attr.aria-pressed]="hide"
-                >
-                    <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                </button>
-                <mat-error 
-                    *ngIf="loginForm.get('password').invalid 
-                    && (loginForm.get('password').touched 
-                    || loginForm.get('password').dirty)"
-                >
-                    <mat-error 
-                        *ngIf="loginForm.get('password').getError('required')"
-                    >
-                        Password is required
-                    </mat-error>
-                    <mat-error 
-                        *ngIf="loginForm.get('password').getError('minLength')"
-                    >
-                        Password must have at least 12 characters
-                    </mat-error>
-                    <mat-error 
-                        *ngIf="loginForm.get('password').getError('pattern')"
-                    >
-                        Password must be at least 8 characters. And has one digit character (0-9), one word character (alphanumeric or underscore), and different of LINE FEED character, and has at least one of special character !@#\$%\^&\* and at least one upper/lower character
-                    </mat-error>
-                </mat-error>
-            </mat-form-field>
-            <p class="registerP">
-                <strong>Are you new to Monument Art Store ?</strong> <a class="registerA" routerLink="/register"> Sign up now</a>
-            </p>
-            <button 
-                mat-raised-button 
-                color="primary" 
-                class="LoginBtn"
-                [disabled]="loginForm.invalid"
-            >
-                Login
-            </button>
-        </form>
-    </mat-card-content>
-</mat-card>
+                        <strong>Login</strong>
+                    </button>
+                </form>
+            </div>
+            <div class="card-footer text-center">
+               <cite class="text-muted">New to Monument Art Store ?</cite> <a class="registerA" routerLink="/register"> Sign up</a>
+            </div>
+        </div>
+    </div>
+</div>
