--- a/monument-art-store/clientApp/src/app/app.component.css
+++ b/monument-art-store/clientApp/src/app/app.component.css
@@ -1,61 +1,3 @@
-.dashboard-card {
-    position: absolute;
-    top: 15px;
-    left: 15px;
-    right: 5px;
-    bottom: 15px;
-}
-
-.dashboard-card-content {
-    text-align: left;
-}
-
-.sideNav-container {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: #ffffff;
-}
-
-.toolbar {
-    background-color: #ffffff;
-}
-
-.sideNav {
-    width: 250px;
-}
-
-.spacer {
-    flex: 1 1 auto;
-}
-
-.account-circle {
-    font-size: 40px;
-    margin-right: 20px;
-    margin-top: 10px;
-}
-
-.menuBtn {
-    font-size: 40px;
-}
-
-.menuBtn:hover {
-    cursor: pointer;
-}
-.mat-h1 {
-    margin: 18px 15px 15px 15px;
-}
-
-.container {
-    margin: 10px 5px 0px 10px;
-}
-
-.sideNavHeaderLink {
-    color: #a19f9f;
-}
-
-.active {
-    background-color: #e2dfdf;
+.login {
+    padding-top: 140px;
 }
