--- a/monument-art-store/clientApp/src/app/components/login/login.component.css
+++ b/monument-art-store/clientApp/src/app/components/login/login.component.css
@@ -1,18 +1,8 @@
-mat-card {
-    max-width: 400px;
-    margin: 10% auto;
-    text-align: center;
-}
-  
-mat-form-field {
-    display: block;
-}
+.card-body {
+    text-align: left;
+    padding: 5%;
 
-.account_circle {
-    font-size: 100px;
-    margin-left: -17%;
 }
-
 .registerP {
     margin-top: 40px;
     font-size: 14px;
@@ -20,4 +10,12 @@ mat-form-field {
 
 .registerA {
     text-decoration: none;
+    color: #0984e3;
+}
+.loginForm {
+    margin-top: 20px;
+}
+small {
+    color: red !important; 
+    padding: 2%;
 }
