--- a/monument-art-store/clientApp/src/styles.css
+++ b/monument-art-store/clientApp/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background: #076585; background: -webkit-linear-gradient(to right, #fff, #076585); background: linear-gradient(to right, #fff, #076585); }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;}
+/* background: #076585; background: -webkit-linear-gradient(to right, #fff, #076585); background: linear-gradient(to right, #fff, #076585);  */
