--- a/monument-art-store/clientApp/src/app/components/login/login.component.css
+++ b/monument-art-store/clientApp/src/app/components/login/login.component.css
@@ -1,21 +1,46 @@
+.card {
+    background-color: transparent;
+    z-index: 2;
+    border: none;
+}
+
+.card-title {
+    text-transform: uppercase;
+}
+
+.card > * {
+    color: #ffffff !important;
+}
+
 .card-body {
     text-align: left;
     padding: 5%;
 
 }
 .registerP {
-    margin-top: 40px;
+    color: #ffffff !important;
     font-size: 14px;
 }
 
 .registerA {
     text-decoration: none;
     color: #0984e3;
+    background-color: #ffffff;
+    padding: 1%;
 }
+
 .loginForm {
     margin-top: 20px;
 }
+
 small {
     color: red !important; 
+    font-weight: 600;
+    background-color: #ffffff;
     padding: 2%;
+}
+
+.card-footer {
+    border: none;
+    background-color: transparent;
 }
