--- a/monument-art-store/clientApp/src/styles.css
+++ b/monument-art-store/clientApp/src/styles.css
@@ -1,5 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,500;0,600;0,800;1,200;1,500;1,600&display=swap');
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;}
-/* background: #076585; background: -webkit-linear-gradient(to right, #fff, #076585); background: linear-gradient(to right, #fff, #076585);  */
+body { margin: 0; font-family: 'Poppins', sans-serif;}
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+}
